--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0 0;
     padding: 0 0;
     font-family: 'Poppins', sans-serif;
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(233, 233, 233);
 
 }
 
@@ -179,6 +179,121 @@ a:hover {
 
 .card:hover {
     transform: scale(1.05);
+}
+
+.p-6 {
+    position: relative;
+    /* Add relative positioning to the container */
+}
+
+.p-6 {
+    position: relative;
+    transition: all 0.7s;
+    /* Apply transition to all properties */
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    opacity: 0;
+    transform: translate(100%, -100%);
+    transition: opacity 0.8s, transform 0.6s;
+    pointer-events: none;
+    z-index: -1;
+}
+
+.p-6:hover .overlay {
+    opacity: 0.8;
+    transform: translate(0, 0);
+    background: linear-gradient(to bottom right, #d62c2c 0%, #d10000 100%);
+}
+
+.p-6:hover h1,
+.p-6:hover p {
+    color: white;
+}
+
+.p-6:hover {
+    transform: scale(1.15);
+    /* Scale up by 25% on hover */
+}
+
+/* Maintain the image size on hover */
+.p-6:hover .w-16,
+.p-6:hover .h-16 {
+    width: 4rem;
+    height: 4rem;
+}
+
+.progress-bar {
+    width: 70%;
+    height: 2px;
+    background-color: red;
+    animation: progressAnimation 1s ease-in-out forwards;
+}
+
+.skew-effect {
+    transition: transform 0.5s;
+}
+
+.skew-effect:hover {
+    transform: skew(10deg);
+}
+
+.overlay:hover {
+    background-color: red;
+    border-color: red;
+    color: white;
+}
+
+.percentage {
+    font-size: 6rem;
+    font-weight: bold;
+}
+
+.animatedBG {
+    background: linear-gradient(55deg, red 50%, #FFFFFF 50%);
+    background-size: 200% 100%;
+    color: black;
+    background-position: right;
+    transition: background-position 0.5s ease-in-out;
+    animation: jumpAnimation;
+    animation-duration: 1000;
+}
+
+.animatedBG:hover {
+
+    background-position: left;
+    color: white;
+}
+
+@keyframes jumpAnimation {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-30px);
+    }
+}
+
+
+
+
+@keyframes progressAnimation {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 95%;
+    }
 }
 
 @media screen and (min-width: 768px) {
