--- a/style.css
+++ b/style.css
@@ -271,6 +271,16 @@ a:hover {
     color: white;
 }
 
+#aboutBanner {
+    background-image: url('./Asset/Images/BMW-7.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 500px;
+    background-color: rgba(0, 0, 0, 0.6);
+
+}
+
 @keyframes jumpAnimation {
 
     0%,
